feat: Setup zod form, next auth wrapper, form error handling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --foreground: #ffffff;
-  --background: #171717;
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground: #0a0a0a;
-    --background: #ededed;
+    --background: #0a0a0a;
+    --foreground: #ededed;
   }
 }
 
